--- a/ClientApp/src/app/raw-material/load-property/load-property.component.html
+++ b/ClientApp/src/app/raw-material/load-property/load-property.component.html
@@ -59,8 +59,8 @@
   <div style="background-color: #f6f5f1;border:solid 0.1px darkgrey">
 
     <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:1%"  (click)="opennewproperty()">Add New Property</button>
-    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:1%" (click)="SaveProperty()">Save</button>
-    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:1%" (click)="deleteProperty()">Delete Property</button>
+    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:1%" (click)="SaveProperty()"matDialogClose>Save</button>
+    <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:1%" (click)="deleteProperty()"matDialogClose>Delete Property</button>
     <button type="submit" class="btn btn-primary  buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:1%" matDialogClose>Back</button>
     
   </div>
