--- a/ClientApp/src/app/raw-material/function-search/function-search.component.css
+++ b/ClientApp/src/app/raw-material/function-search/function-search.component.css
@@ -15,7 +15,14 @@ p.test {
 input {
   margin: 5px;
 }
-
+label {
+  font-size: 15px;
+  font-family: Verdana;
+  text-align: right;
+  padding-right: 20px;
+  display: inline-block;
+  min-width: 150px;
+}
 fieldset.scheduler-border {
   border: solid 1px #DDD !important;
   padding: 0 10px 10px 10px;
