--- a/ClientApp/src/app/raw-material/search-inci-name/search-inci-name.component.html
+++ b/ClientApp/src/app/raw-material/search-inci-name/search-inci-name.component.html
@@ -70,7 +70,7 @@ Please provide a valid zip.
           </div>
           <div class="form-inline"  style="padding-top:5px">
             <label for="PDR #">Function</label>
-            <select id="PRD" class="form-control" style="width:60%;  margin-left:4px">
+            <select id="PRD" class="form-control" style="width:60%;  margin-left:4px"[(ngModel)]="fun_name"  name="funct" value="" >
               <option selected>Choose...</option>
               <option *ngFor="let funcval of dataloadfuncsearch">{{funcval.function}}</option>
 
@@ -80,7 +80,7 @@ Please provide a valid zip.
           </div>
           <div class="form-inline" style="padding-top:5px">
             <label for="PDR #">Item #</label>
-            <input style="width:60%;" type="text" class="form-control" id="Project Name" #itemcode name="itemcode" value="">
+            <input style="width:60%;" type="text" class="form-control" id="Project Name" [(ngModel)]="itemc"  name="itemva" value="" >
           </div>
         </div>
         <div class="form-group col-md-5">
@@ -92,7 +92,7 @@ Please provide a valid zip.
 
 
 
-            <input style="width: 60%;" type="text" class="form-control" id="PDR #" #supplier name="supplier" value="">
+            <input style="width: 60%;" type="text" class="form-control" id="sup"[(ngModel)]="supplierva"  name="supplierv" value="">
           </div>
 
 
@@ -100,7 +100,7 @@ Please provide a valid zip.
 
           <div class="form-inline">
             <label for="PDR #">Trade Name</label>
-            <input style="width:60%;" type="text" class="form-control" id="Project Name" #tradename name="tradename" value="">
+            <input style="width:60%;" type="text" class="form-control" id="tradeName" [(ngModel)]="tradenam"  name="tradeval" value="">
 
 
 
@@ -110,7 +110,7 @@ Please provide a valid zip.
 
           <div class="form-inline">
             <label for="PDR #">CAS No</label>
-            <input style="width:60%;" type="text" class="form-control" id="Project Name">
+            <input style="width:60%;" type="text" class="form-control" [(ngModel)]="casnum"  name="casnumval" value="">
 
 
 
@@ -130,22 +130,22 @@ Please provide a valid zip.
       <p style="margin-top: 10px;margin-left:1%;margin-right:1%">Make your selection by double clicking on your choice</p>
       <span>
         <mat-radio-group aria-label="Select an option">
-          <mat-radio-button value="false" (click)="setradio('1')">Approved</mat-radio-button>
-          <mat-radio-button value="false" style="margin-left:10px;" (click)="setradio('0')">Unapproved</mat-radio-button>
-          <mat-radio-button value="true"  checked="checked" style="margin-left:10px;" (click)="setradio('2')">All</mat-radio-button>
+          <mat-radio-button id="rad1" value="false" (click)="setradio('1')">Approved</mat-radio-button>
+          <mat-radio-button id="rad2" value="false" style="margin-left:10px;" (click)="setradio('0')">Unapproved</mat-radio-button>
+          <mat-radio-button id="rad3" value="true"  checked="checked" style="margin-left:10px;" (click)="setradio('2')">All</mat-radio-button>
         </mat-radio-group>
       </span>
     </div>
     <div class=" form-row">
       <div class="form-group col-md-12">
         <div style="margin-left:1%;margin-top:1%; height:470px;overflow-y: scroll" (scroll)="onScroll($event)">
-          <table class="table-hover table-bordered" style="margin-left: 10px; background-color: white" id="table" width="99%">
+          <table class=" table table-hover table-bordered" style=" background-color: white" id="table" width="99%">
             <thead>
               <tr>
                 <th class="header" scope="col" style="width:30%" >INCI Name</th>
                 <th class="header" scope="col"style="width:12%"  >Item #</th>
-                <th class="header" scope="col" style="width:25%" >Trade Name</th>
-                <th class="header" scope="col" >CAS No</th>
+                <th class="header" scope="col" style="width:22%" >Trade Name</th>
+                <th class="header" scope="col"style="width:12%" >CAS No</th>
                 <th class="header" scope="col" style="width:5%">Function</th>
                 <th class="header" scope="col" style="width:15%" >Supplier Name</th>
                 <th class="header" scope="col" style="text-align:right">P#</th>
@@ -161,7 +161,7 @@ Please provide a valid zip.
 
 
 
-              <tr *ngFor="let raw_cate_search of datarawmaterialssearch |slice:pageStart:pageEnd; let i=index;" (dblclick)="setvalues(raw_cate_search);close();"#conten>
+              <tr *ngFor="let raw_cate_search of datarawmaterialssearch | filter:inci | filter:fun_name | filter:tradenam | filter:itemc | filter:supplierva | filter:casnum |slice:pageStart:pageEnd; let i=index;" (dblclick)="setvalues(raw_cate_search);close();"#conten>
                 <td class="tabledatasize">{{ raw_cate_search.INCIName}}</td>
                 <td class="tabledatasize">{{ raw_cate_search.Item }}</td>
                 <td class="tabledatasize"> {{raw_cate_search.TradeName }}</td>
