--- a/ClientApp/src/app/pdr-management/loadspecification-parameter/loadspecification-parameter.component.html
+++ b/ClientApp/src/app/pdr-management/loadspecification-parameter/loadspecification-parameter.component.html
@@ -1,13 +1,6 @@
 <div style="background-color: #f6f5f1">
-  <div class="row">
-    <div class="col-md-6 offset-md-4">
-      <form class="form-inline" style="margin-left:5%;margin-bottom:20px;">
-        <h3 style="margin-top: 20px; font-family: Playfair Display; background-color: #f6f5f1;color: #150485">SMART</h3>
-        <h3 style="margin-top: 20px;font-family: Playfair Display;background-color: #f6f5f1;color: #bb2205">Formulator </h3>
-        <h3 style="margin-top: 20px;font-family: Playfair Display;background-color: #f6f5f1;color: black">-Specification Params</h3>
-      </form>
-    </div>
-  </div>
+  <h2 style="    margin-bottom: 5px; margin-top:5px;font-family: Playfair Display;    background-color: #f6f5f1; color: black; text-align:center">Specification Params</h2>
+
   <!--<mat-grid-list cols="2" rowHeight="18:1" style="background-color:white">
   <mat-grid-tile>Property</mat-grid-tile>
   <mat-grid-tile>value</mat-grid-tile>
@@ -86,7 +79,7 @@
               <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:14%;" (click)="openloadaddnewparam()">Add New Param</button>
               <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" (click)="SaveProperty()">Save</button>
               <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:170px;margin-left:1%;" (click)="deleteProperty()">Delete Param</button>
-              <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" (click)="closedialog()">Back</button>
+              <button type="submit" class="btn btn-primary buttoncolor" style="height:50px;width:70px;margin-left:1%;" (click)="closedialog()"matDialogClose>Back</button>
             </div>
           </div>
         </form>
